# wordle-solver

./: .flake8  .pre-commit-config.yaml  README  README.md  pyproject.toml  termo.txt  termooo.txt  wordle_solver.py
.github/: dependabot.yml
